--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="center">Aprendendo CSS</h1>
+    <h1 class="center">Aprendendo CSS</h1> </body>
    <p id="para"class="center fonte fonte-verde">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam commodi dicta nisi amet labore inventore, praesentium quos velit saepe. Et consequuntur, ipsum ab nostrum ipsa amet distinctio atque sequi explicabo!</p>
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam commodi dicta nisi amet labore inventore, praesentium quos velit saepe. Et consequuntur, ipsum ab nostrum ipsa amet distinctio atque sequi explicabo!</p>
-  
+   <img src="unicornio-removebg-preview.png"width="100"height="100">
    <h1>Aprendendo Classes</h1>
 </body>
 </html>
